--- a/LeagueScheduler31/app-ngadmin/slots/slots.html
+++ b/LeagueScheduler31/app-ngadmin/slots/slots.html
@@ -1,20 +1,16 @@
 ﻿<div>
-    <div class="row" style="padding-top:20px;padding-bottom:20px;">
-        <!--<div class="col-md-3">
-            <h2>Time Slots</h2>
-        </div>-->
+    <!--<div class="row" style="padding-top:20px;padding-bottom:20px;">
         <div class="col-md-3">
             <input type="text" placeholder="Location Filter" ng-model="vm.locationFilter" class="form-control" />
         </div>
         <div class="col-md-6">
-            <!--<button class="btn btn-primary" ng-click="vm.generateSlots()">Generate</button>-->
             <button class="btn btn-success" ng-click="vm.saveLocal()">Save Local</button>
         </div>
-    </div>
+    </div>-->
     <div class="row">
         <alert ng-repeat="alert in vm.alerts" type="{{alert.type}}" close="vm.closeAlert($index)">{{alert.msg}}</alert>
     </div>
-    
+
     <form name="userForm">
         <table class="table table-bordered table-hover table-striped">
             <thead>
@@ -64,13 +60,14 @@
 
                 <tr ng-repeat="slot in vm.slots | filter:vm.locationFilter">
                     <td>{{$index + 1}}</td>
-                    <td>{{slot.locationName}}</td>
+                    <!--<td>{{slot.locationName}}</td>-->
+                    <td>{{vm.locationsLookup[slot.locationId]}}</td>
                     <td>{{slot.startTime | date: 'M/d/yyyy'}}</td>
                     <td>{{slot.startTime | date: 'shortTime'}}</td>
                     <td>{{slot.endTime | date: 'shortTime'}}</td>
                     <td>{{slot.gameDuration}}</td>
                     <td>
-                        <button class="btn btn-danger" ng-click="vm.removeSlot(slot)">
+                        <button class="btn btn-danger" ng-click="vm.removeSlot(slot.id)">
                             <span class="glyphicon glyphicon-trash"></span>
                         </button>
                     </td>
