--- a/LeagueScheduler31/app-ngadmin/generation/generation.html
+++ b/LeagueScheduler31/app-ngadmin/generation/generation.html
@@ -1,15 +1,20 @@
 ﻿<div>
     <div class="row" style="padding-top:20px;padding-bottom:10px;">
-        
         <div class="col-md-6">
             <button class="btn btn-primary" ng-click="vm.generate()">Generate</button>
-            <button class="btn btn-success" ng-click="vm.saveLocal()">Save Local</button>
+            <!--<button class="btn btn-success" ng-click="vm.saveLocal()">Save Local</button>-->
         </div>
     </div>
     <div class="row">
-        <alert ng-repeat="alert in vm.alerts" type="{{alert.type}}" close="vm.closeAlert($index)">{{alert.msg}}</alert>
+        <!--<alert ng-repeat="alert in vm.alerts" type="{{alert.type}}" close="vm.closeAlert($index)">{{alert.msg}}</alert>-->
+        <alert ng-repeat="alert in vm.alerts" type="{{alert.type}}" close="vm.closeAlert($index)">
+            {{alert.mainMessage}}
+            <ul ng-show="alert.messages">
+                <li ng-repeat="msg in alert.messages">{{msg}}</li>
+            </ul>
+        </alert>
     </div>
-    
+
 
     <div ng-repeat="division in vm.divisions">
         <h3>{{division.divisionName}}</h3>
@@ -70,7 +75,7 @@
         <div ng:repeat="item in division.teams">{{item}}</div>-->
     </div>
 
-    <div ng-repeat="matchUp in vm.allMatchUps">
+    <!--<div ng-repeat="matchUp in vm.allMatchUps">
         <h3>{{matchUp.name}}</h3>
 
         <table class="table table-bordered table-hover table-striped">
@@ -91,5 +96,34 @@
                 </tr>
             </tbody>
         </table>
-    </div>
+    </div>-->
+
+
+    <!--<div ui-grid="vm.gridOptions" ui-grid-edit class="import-area"></div>-->
+    <div ui-grid="vm.gridOptions"></div>
+
+
+        <!--<table class="table table-bordered table-hover table-striped">
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Time</th>
+                    <th>Round</th>
+                    <th>Teams (Home team first)</th>
+                    <th>Division</th>
+                    <th>Location</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="mu in vm.allMatchUps">
+                    <td></td>
+                    <td></td>
+                    <td>{{mu.round}}</td>
+                    <td>{{vm.teamsLookup[mu.team1]}} vs. {{vm.teamsLookup[mu.team2]}}</td>
+                    <td>{{mu.division}}</td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>-->
+
 </div>
