--- a/LeagueScheduler31/app-ngadmin/generation/generation.html
+++ b/LeagueScheduler31/app-ngadmin/generation/generation.html
@@ -2,7 +2,7 @@
     <div class="row" style="padding-top:20px;padding-bottom:10px;">
         <div class="col-md-6">
             <button class="btn btn-primary" ng-click="vm.generate()">Generate</button>
-            <!--<button class="btn btn-success" ng-click="vm.saveLocal()">Save Local</button>-->
+            <button class="btn btn-success" ng-click="vm.saveAll()">Save All</button>
         </div>
     </div>
     <div class="row">
