--- a/LeagueScheduler31/app-ngadmin/teams/teams.html
+++ b/LeagueScheduler31/app-ngadmin/teams/teams.html
@@ -44,6 +44,7 @@
                                 <ul class="dropdown-menu" role="menu">
                                     <li><a ng-click="vm.editItem(team)">Edit</a></li>
                                     <li><a ng-click="vm.deleteItem(team.id)">Delete</a></li>
+                                    <li><a ng-click="vm.specialRequest(team)">Special Requests</a></li>
                                 </ul>
                             </div>
                         </td>
