--- a/LeagueScheduler31/app-ngadmin/teams/special-requests.html
+++ b/LeagueScheduler31/app-ngadmin/teams/special-requests.html
@@ -2,9 +2,39 @@
     <h2>Special Scheduling Requests</h2>
 </div>
 <div class="modal-body">
-    <h3>{{vm.properties.team.name}}</h3>
-    <textarea cols="30" rows="10" ng-model="vm.editableItem.requestText" style="width:100%"></textarea>
+    <h4>Team: {{vm.properties.team.name}}</h4>
+    <hr />
+    <div class="alert alert-info">
+        <h4>Special Requests</h4>
+        Type free-form text for the team's special scheduling request.
+        (Long-term we want this text box going away once we automate the scheduling requests)
+    </div>
+    <textarea cols="30" rows="3" ng-model="vm.editableItem.requestText" style="width:100%"></textarea>
+
+    <hr />
+    <div class="alert alert-info">
+        <h4>Available Hours</h4>
+        <strong>Click</strong> a box to specify times when a team cannot play.
+        <strong>Orange</strong> box means team is <strong>not</strong> available.
+        <strong>White</strong> box means team <strong>is</strong> available.
+    </div>
+
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th></th>
+                <th class="col-md-1 text-center small" ng-repeat="hour in vm.potentialHours">{{hour | date:'ha'}}</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="day in vm.potentialDays">
+                <td>{{day.date | date:'shortDate'}}</td>
+                <td ng-repeat="hour in day.hours" ng-click="vm.selectHour(hour)" ng-class="{'btn-primary': hour.selected}"></td>
+            </tr>
+        </tbody>
+    </table>
 </div>
+
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="vm.save()">Save</button>
     <button class="btn btn-default" ng-click="vm.cancel()">Cancel</button>
