--- a/LeagueScheduler31/app-ngadmin/generation/generation.html
+++ b/LeagueScheduler31/app-ngadmin/generation/generation.html
@@ -103,7 +103,7 @@
 
 
     <!--<div ui-grid="vm.gridOptions" ui-grid-edit class="import-area"></div>-->
-    <div ui-grid="vm.gridOptions"></div>
+    <div ui-grid="vm.gridOptions" ui-grid-exporter></div>
 
 
         <!--<table class="table table-bordered table-hover table-striped">
