several enhancements to data entry

--- a/LeagueScheduler31/app-ngadmin/games/edit-game.html
+++ b/LeagueScheduler31/app-ngadmin/games/edit-game.html
@@ -42,6 +42,7 @@
 </div>
 
 <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="vm.save()">Save</button>
+    <button class="btn btn-primary" ng-click="vm.saveAndAddAnother()">Save &amp; Add Another</button>
+    <button class="btn btn-primary" ng-click="vm.save()">Save &amp; Close</button>
     <button class="btn btn-default" ng-click="vm.cancel()">Cancel</button>
 </div>
