--- a/LeagueScheduler31/app-ngadmin/generation/generation.html
+++ b/LeagueScheduler31/app-ngadmin/generation/generation.html
@@ -3,9 +3,16 @@
         <div class="col-md-2">
             <input type="text" value="" placeholder="# Rounds" class="form-control" ng-model="vm.numberOfRounds" />
         </div>
-        <div class="col-md-6">
+        <div class="col-md-2">
             <button class="btn btn-primary" ng-click="vm.generate()">Generate</button>
             <button class="btn btn-success" ng-click="vm.saveAll()">Save All</button>
+        </div>
+        <div class="col-md-4">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" ng-model="vm.deleteBeforeSave">Delete All Before Save?
+                </label>
+            </div>
         </div>
     </div>
     <div class="row">
