--- a/LeagueScheduler31/app-ngadmin/teams/special-requests.html
+++ b/LeagueScheduler31/app-ngadmin/teams/special-requests.html
@@ -1,9 +1,10 @@
 ﻿<div class="modal-header">
-    <h2>Special Scheduling Requests</h2>
+    <h2>Special Scheduling Requests - {{vm.properties.team.name}}</h2>
 </div>
 <div class="modal-body">
-    <h4>Team: {{vm.properties.team.name}}</h4>
-    <hr />
+    <!--<h4>Team: {{vm.properties.team.name}}</h4>-->
+
+    <!--<hr />
     <div class="alert alert-info">
         <h4>Special Requests</h4>
         Type free-form text for the team's special scheduling request.
@@ -15,18 +16,18 @@
         <label>
             <input type="checkbox" ng-model="vm.editableItem.resolved" />Resolved?
         </label>
-    </div>
+    </div>-->
 
 
-    <hr />
+    <!--<hr />-->
     <div class="alert alert-info">
         <h4>Available Hours</h4>
         <strong>Click</strong> a box to specify times when a team cannot play.
-        <strong>Orange</strong> box means team is <strong>not</strong> available.
-        <strong>White</strong> box means team <strong>is</strong> available.
+        <strong><span class="text-primary">Orange</span></strong> box means team is <strong><span class="text-primary">not available</span></strong>.
+        <strong>White</strong> box means team <strong>is available</strong>.
     </div>
 
-    <table class="table table-bordered">
+    <!--<table class="table table-bordered">
         <thead>
             <tr>
                 <th></th>
@@ -39,7 +40,67 @@
                 <td ng-repeat="hour in day.hours" ng-click="vm.selectHour(hour)" ng-class="{'btn-primary': hour.selected}"></td>
             </tr>
         </tbody>
-    </table>
+    </table>-->
+
+    <div ng-repeat="day in vm.potentialDays">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th class=" text-center small" style="width: 55px" ng-repeat="hour in vm.potentialHours">{{hour | date:'ha'}}</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>{{day.date | date:'shortDate'}}</td>
+                    <td ng-repeat="hour in day.hours" ng-click="vm.selectHour(hour)" ng-class="{'btn-primary': hour.selected}"></td>
+                </tr>
+            </tbody>
+        </table>
+
+        <div>
+            <!--<input type="text" class="form-control" placeholder="Extra request for {{day.date | date:'shortDate'}}..." />
+
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" ng-model="vm.editableItem.resolved" />Resolved?
+                </label>
+            </div>-->
+
+            <form class="form">
+                <div class="row">
+                    <div class="col-md-6">
+                        <!--<input type="text" class="form-control" placeholder=".col-xs-2">-->
+                        <input type="text" class="form-control" placeholder="Extra request for {{day.date | date:'shortDate'}}..." />
+                    </div>
+                    <div class="col-md-3">
+                        <!--<input type="text" class="form-control" placeholder=".col-xs-3">-->
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" ng-model="vm.editableItem.resolved" /> Resolved?
+                            </label>
+                        </div>
+                    </div>
+                    <!--<div class="col-xs-4">
+                        <input type="text" class="form-control" placeholder=".col-xs-4">
+                    </div>-->
+                </div>
+
+                <!--<div class="form-group">
+                    <input type="text" class="form-control" placeholder="Extra request for {{day.date | date:'shortDate'}}..." />
+                </div>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" ng-model="vm.editableItem.resolved" /> Resolved?
+                    </label>
+                </div>-->
+            </form>
+        </div>
+        <hr />
+    </div>
+
+
+
 </div>
 
 <div class="modal-footer">
