--- a/LeagueScheduler31/app-ngadmin/teams/special-requests.html
+++ b/LeagueScheduler31/app-ngadmin/teams/special-requests.html
@@ -27,73 +27,37 @@
         <strong>White</strong> box means team <strong>is available</strong>.
     </div>
 
-    <!--<table class="table table-bordered">
-        <thead>
-            <tr>
-                <th></th>
-                <th class=" text-center small" style="width: 55px" ng-repeat="hour in vm.potentialHours">{{hour | date:'ha'}}</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="day in vm.potentialDays">
-                <td>{{day.date | date:'shortDate'}}</td>
-                <td ng-repeat="hour in day.hours" ng-click="vm.selectHour(hour)" ng-class="{'btn-primary': hour.selected}"></td>
-            </tr>
-        </tbody>
-    </table>-->
 
-    <div ng-repeat="day in vm.potentialDays">
+    <div ng-repeat="day in vm.scheduleRequests">
         <table class="table table-bordered">
             <thead>
                 <tr>
                     <th></th>
-                    <th class=" text-center small" style="width: 55px" ng-repeat="hour in vm.potentialHours">{{hour | date:'ha'}}</th>
+                    <th class=" text-center small" style="width: 55px" ng-repeat="hour in vm.potentialHoursLabels">{{hour}}</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>{{day.date | date:'shortDate'}}</td>
-                    <td ng-repeat="hour in day.hours" ng-click="vm.selectHour(hour)" ng-class="{'btn-primary': hour.selected}"></td>
+                    <td ng-repeat="hour in day.unavailableHours" ng-click="vm.selectHour(hour)" ng-class="{'btn-primary': hour.selected}"></td>
                 </tr>
             </tbody>
         </table>
 
         <div>
-            <!--<input type="text" class="form-control" placeholder="Extra request for {{day.date | date:'shortDate'}}..." />
-
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox" ng-model="vm.editableItem.resolved" />Resolved?
-                </label>
-            </div>-->
-
             <form class="form">
                 <div class="row">
                     <div class="col-md-6">
-                        <!--<input type="text" class="form-control" placeholder=".col-xs-2">-->
-                        <input type="text" class="form-control" placeholder="Extra request for {{day.date | date:'shortDate'}}..." />
+                        <input type="text" class="form-control" ng-model="day.extraRequest" placeholder="Extra request for {{day.date | date:'shortDate'}}..." />
                     </div>
                     <div class="col-md-3">
-                        <!--<input type="text" class="form-control" placeholder=".col-xs-3">-->
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" ng-model="vm.editableItem.resolved" /> Resolved?
+                                <input type="checkbox" ng-model="day.resolved" /> Resolved?
                             </label>
                         </div>
                     </div>
-                    <!--<div class="col-xs-4">
-                        <input type="text" class="form-control" placeholder=".col-xs-4">
-                    </div>-->
                 </div>
-
-                <!--<div class="form-group">
-                    <input type="text" class="form-control" placeholder="Extra request for {{day.date | date:'shortDate'}}..." />
-                </div>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" ng-model="vm.editableItem.resolved" /> Resolved?
-                    </label>
-                </div>-->
             </form>
         </div>
         <hr />
@@ -106,4 +70,5 @@
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="vm.save()">Save</button>
     <button class="btn btn-default" ng-click="vm.cancel()">Cancel</button>
+    <button class="btn btn-danger" popover="Delete All Schedule Requests for this team" popover-trigger="mouseenter" popover-placement="top">Delete Requests</button>
 </div>
