added ability to see open time slots

--- a/LeagueScheduler31/app-ngadmin/games/games.html
+++ b/LeagueScheduler31/app-ngadmin/games/games.html
@@ -11,8 +11,8 @@
                 </button>
                 <ul class="dropdown-menu" role="menu">
                     <li><a ng-click="vm.validateAll()">Validate</a></li>
-                    <li><a>View Unused Slots</a></li>
-                    <li><a>View Team Opponent Matrix</a></li>
+                    <li><a ng-click="vm.viewUnusedSlots()">View Unused Slots</a></li>
+                    <li><a ng-click="vm.viewOpponentMatrix()">View Team Opponent Matrix</a></li>
                 </ul>
             </div>
 
